--- a/server/views/stats.ejs
+++ b/server/views/stats.ejs
@@ -2,3 +2,6 @@
 
 <p>You usually leave around: <%= mostOftenLeaveTime %>:00.</p>
 <p>You usually return around: <%= mostOfterEnterTime %>:00.</p>
+<br />
+<p>Last Enter Time: <%= lastEnterTime %>.</p>
+<p>Last Leave Time: <%= lastLeaveTime %>.</p>
